--- a/src/index.less
+++ b/src/index.less
@@ -2,8 +2,12 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
   background: #2e2e2e;
